--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -155,7 +155,7 @@
   "global.language.german": "German",
   "global.language.japanese": "Japanese / 日本語",
   "global.language.korean": "Korean",
-  "global.passwordInstructions": "The password needs to be <strong>at least 10 characters</strong> long.",
+  "global.passwordInstructions": "The password needs to be <strong>at least 10 characters</strong> and <strong>at most 255 characters</strong> long.",
   "global.punctuation.colon": ":",
   "global.punctuation.dot": ".",
   "global.range.from": "from",
