[DDW-480] Tile view in the delegation center (#2275)
* DDW-480 Tile view in the delegation center

* DDW-480 Tile view in the delegation center - adding epoch titles

* DDW-480 Tile view in the delegation center - styling epoch titles

* DDW-480 Tile view in the delegation center - adding epoch tiles

* DDW-480 Tile view in the delegation center - adding translations

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - positioning & styling tiles

* DDW-480 Tile view in the delegation center - implementing tile view on Wallet row on Delegation center

* DDW-480 Tile view in the delegation center - implementing tile view on Wallet row on Delegation center

* DDW-480 Tile view in the delegation center - updating changelog

* DDW-480 Tile view in the delegation center - updating hover effect for action buttons

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* DDW-480 Tile view in the delegation center - fixes

* [DDW-480] Run translation manager and prettier

* DDW-480 Tile view in the delegation center - fixing positioning of sync loader

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - fixes for hover on tiles

* DDW-480 Tile view in the delegation center - adding stakepool tooltip on click

* DDW-480 Tile view in the delegation center - adding stakepool tooltip on hover

* DDW-480 Tile view in the delegation center - fixing stakepool tooltip position

* DDW-480 Tile v

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -292,6 +292,7 @@
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
   "staking.delegationCenter.bodyTitle": "ウォレット",
+  "staking.delegationCenter.currentEpochTitle": "今",
   "staking.delegationCenter.currentSlot": "現行スロット",
   "staking.delegationCenter.delegate": "委任する",
   "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。Cardanoメインネットにおける1エポックは5日です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
@@ -303,10 +304,9 @@
   "staking.delegationCenter.noWallets.headLine": "委任センターはShelley対応のウォレットがないと利用できません。",
   "staking.delegationCenter.noWallets.instructions": "ウォレットを作成し、{minDelegationFunds}ADA以上を移して（または既存の資金入りウォレットを復元して）から、改めてここでステークを委任してください。",
   "staking.delegationCenter.notDelegated": "委任未設定",
-  "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
   "staking.delegationCenter.removeDelegation": "委任を解除する",
-  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "現在報酬を獲得中",
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "総スロット数",
