--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -462,6 +462,7 @@
   "staking.rewards.tableHeader.reward": "Reward",
   "staking.rewards.tableHeader.wallet": "Wallet",
   "staking.rewards.title": "Earned delegation rewards",
+  "staking.stakePools.curatedBy": "Curated by",
   "staking.stakePools.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.learnMore": "Learn more",
   "staking.stakePools.listTitle": "Stake pools ({pools})",
