DDW-500 Implement design for native tokens - Wallet token send form updates for deposit, fee fields

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -821,8 +821,10 @@
   "wallet.send.form.amount.label": "Amount",
   "wallet.send.form.description.hint": "You can type a message here, if you want.",
   "wallet.send.form.description.label": "Description",
+  "wallet.send.form.deposit.label": "Deposit",
   "wallet.send.form.errors.invalidAmount": "Please enter a valid amount.",
   "wallet.send.form.errors.invalidTitle": "Please enter a title with at least 3 characters.",
+  "wallet.send.form.estimatedFee.label": "Estimated fees",
   "wallet.send.form.next": "Next",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
