--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -821,8 +821,10 @@
   "wallet.send.form.amount.label": "金額",
   "wallet.send.form.description.hint": "任意のメッセージを入力できます",
   "wallet.send.form.description.label": "詳細",
+  "wallet.send.form.deposit.label": "預り金",
   "wallet.send.form.errors.invalidAmount": "有効な金額を入力してください。",
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
+  "wallet.send.form.estimatedFee.label": "推定料金",
   "wallet.send.form.next": "続ける",
   "wallet.send.form.receiver.hint": "ウォレットアドレス",
   "wallet.send.form.receiver.label": "送金先",
