--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -279,8 +279,17 @@
   "settings.menu.stakePools.link.label": "Stake pools",
   "settings.menu.support.link.label": "Support",
   "settings.menu.termsOfUse.link.label": "Terms of service",
+  "settings.stakePools.smash.description1": "The Stakepool Metadata Aggregation Server (SMASH) is an off-chain metadata server for:",
+  "settings.stakePools.smash.description2": "If you decide not to use an off-chain metadata server, your Daedalus client will be forced to fetch this data by contacting every stake pool individually, which is a very slow and resource-consuming process. The list of stake pools received is not curated, so Daedalus will get legitimate, duplicates, and fake pools. An added risk to this process is that your antivirus or antimalware software could recognize making thousands of network requests as malicious behavior by the Daedalus client.",
+  "settings.stakePools.smash.descriptionItem1Content1": "Every server has a different curation policy. For example, the IOHK server ensures that registered stake pools are valid, helps to avoid duplicated ticker names or trademarks, and checks that the pools do not feature potentially offensive or harmful.",
+  "settings.stakePools.smash.descriptionItem1Content2": "Scams, trolls, and abusive behavior are unfortunately part of the online ecosystem, we had to find a way to filter potentially problematic actors out of the playing field.",
+  "settings.stakePools.smash.descriptionItem1Title": "Curating the server list.",
+  "settings.stakePools.smash.descriptionItem2Content": "Your Daedalus client does not fetch the stake pool data individually from every stake pool. Rather, it loads off-chain data for all of the stake pools found in the selected server.",
+  "settings.stakePools.smash.descriptionItem2Title": "Enabling faster loading of stake pools.",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK",
+  "settings.stakePools.smash.select.customServer": "Custom server",
+  "settings.stakePools.smash.select.direct": "None - let my Daedalus client fetch the data",
   "settings.stakePools.smash.select.label": "Off-chain metadata server (SMASH)",
-  "settings.stakePools.smash.select.placeholder": "Custom server",
   "settings.stakePools.smashUrl.input.invalidUrl": "Invalid URL",
   "settings.stakePools.smashUrl.input.label": "SMASH server URL",
   "settings.stakePools.smashUrl.input.placeholder": "Enter custom server URL",
