--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -279,8 +279,17 @@
   "settings.menu.stakePools.link.label": "ステークプール",
   "settings.menu.support.link.label": "ユーザーサポート",
   "settings.menu.termsOfUse.link.label": "サービス利用規約",
+  "settings.stakePools.smash.description1": "ステークプールメタデータアグリゲーションサーバー（SMASH）は以下のためのオフチェーンメタデータサーバーです。",
+  "settings.stakePools.smash.description2": "!!!If you decide not to use an off-chain metadata server, your Daedalus client will be forced to fetch this data by contacting every stake pool individually, which is a very slow and resource-consuming process. The list of stake pools received is not curated, so Daedalus will get legitimate, duplicates, and fake pools. An added risk to this process is that your antivirus or antimalware software could recognize making thousands of network requests as malicious behavior by the Daedalus client.",
+  "settings.stakePools.smash.descriptionItem1Content1": "すべてのサーバーは、個別のキュレーションポリシーを採用しています。例えば、IOHKサーバーは、登録されたステークプールが有効であることを確実にし、ティッカー名や商標の重複を回避し、プールが攻撃的または害となる可能性のある機能を有していないかチェックします。",
+  "settings.stakePools.smash.descriptionItem1Content2": "不運なことに、詐欺や荒らし、虐待行為もオンラインエコシステムの一部であることを受け、問題となる恐れのあるアクターを活動の場からふるい落とす方法を見つける必要がありました。",
+  "settings.stakePools.smash.descriptionItem1Title": "サーバーリストのキュレーション",
+  "settings.stakePools.smash.descriptionItem2Content": "各Daedalusクライアントが、すべてのステークプールから個別にデータをフェッチすることはありません。選択されたサーバーにある全ステークプールのオフチェーンデータをロードします。",
+  "settings.stakePools.smash.descriptionItem2Title": "ステークプールのロードの高速化を実現",
+  "settings.stakePools.smash.select.IOHKServer": "IOHK",
+  "settings.stakePools.smash.select.customServer": "カスタムサーバー",
+  "settings.stakePools.smash.select.direct": "なし - Daedalusクライアントにデータをフェッチさせる",
   "settings.stakePools.smash.select.label": "オフチェーンメタデータサーバー（SMASH）",
-  "settings.stakePools.smash.select.placeholder": "カスタムサーバー",
   "settings.stakePools.smashUrl.input.invalidUrl": "無効なURL",
   "settings.stakePools.smashUrl.input.label": "SMASHサーバーURL",
   "settings.stakePools.smashUrl.input.placeholder": "カスタムサーバーを入力してください",
@@ -462,6 +471,7 @@
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
+  "staking.stakePools.curatedBy": "!!!Curated by",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
